public static class PlayerString
{
    public static class PlayerAnimationParameters
    {
        public const string IS_JUMPING = "IsJumping";
        public const string IS_GROUND = "IsOnGround";
        public const string MOVE_X = "MoveX";
        public const string MOVE_Y = "MoveY";
        public const string IS_BEING_HIT = "IsBeingHit";
        public const string DEAD_HIT = "DeadHit";
    }

    public static class PlayerParticleTrigger
    {
        public const string JUMP = "Jump";
        public const string GROUND = "Ground";
        public const string BEGIN_RUN = "BeginRun";
        public const string END_RUN = "EndRun";
    }
}